# deltafi-contracts

./: .gitignore  Cargo.toml  README.md  do.sh  program-id.md
lib/client/: .prettierrc  package.json
lib/client/src/: admin.ts  constants.ts  index.ts  stable-swap.ts  swap.ts
lib/client/src/instructions/: admin.ts  index.ts  swap.ts
lib/client/src/state/: ConfigInfo.ts  SwapInfo.ts  fees.ts  fixed64.ts  index.ts  rewards.ts
lib/client/src/types/: buffer-layout.d.ts
lib/client/src/util/: account.ts  index.ts  layout.ts  send-and-confirm-transaction.ts
lib/client/test/: admin.int.test.ts  helpers.ts  swap.test.ts
lib/sim/src/: lib.rs
proptest-regressions/state/: liquidity.txt
scripts/: cargo-build-test.sh  cargo-test-bpf.sh  deploy-stable-swap.sh  install-program-deps.sh  rust-version.sh  solana-version.sh
src/: admin.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
src/curve/: calc.rs  mod.rs  pool.rs
src/math/: approximations.rs  decimal.rs  mod.rs  rate.rs
src/state/: config.rs  fees.rs  liquidity.rs  mod.rs  rewards.rs  swap.rs
tests/: commit_new_admin.rs  deposit_to_pool.rs  do_swap.rs  init_liquidity_provider.rs  init_swap_config.rs  init_swap_pool.rs  withdraw_to_swap.rs
tests/fixtures/: README.md  deltafi-owner.json
tests/utils/: mod.rs
