
# Note: This crate must be built using do.sh

[package]
name = "deltafi-swap"
version = "1.0.0"
description = "Deltafi token swap program"
authors = ["Solana Maintainers <maintainers@deltafi.ai>"]
repository = "https://github.com/delta-fi/deltafi-contracts"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.7.2"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-token = { version = "3.2", features = ["no-entrypoint"] }
thiserror = "1.0"
uint = "0.9"

[dev-dependencies]
assert_matches = "1.5.0"
log = "0.4"
proptest = "1.0"
rand = "0.8.0"
sim =  { path = "./lib/sim" }
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
serde = "1.0"
serde_yaml = "0.8"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
